# Schreier_Sims_algorithm

./: CMakeLists.txt
include/: BigInteger.hpp  Permutation.h  SchreierSimsTest.h  SchreierStabChain.h  SchreierTree.h
my_task/: task.cpp
src/: Permutation.cpp  Permutation_Cycle.cpp  SchreierStabChain.cpp  SchreierTree.cpp  main.cpp
test/: SchreierSimsTest.cpp  test.cpp
